# job-radar

./: .env.example  .gitignore  LICENSE  README.md  boss_drission.py  boss_setup_login.py  pyproject.toml
config/: ats_targets.yaml  profile.example.yaml
data/: sample_jobs.json
docs/: boss-command.md  extension.md  wxpusher-setup.md
docs/launch/: checklist.md  demo-data-inject.md  image-prompts.md  posts.md  screenshots.md  video-script.md
extension/: background.js  content.js  dashboard.html  dashboard.js  dict.json  injected.js  manifest.json  popup.html  popup.js
launchd/: com.jobradar.bossreminder.example.plist  com.jobradar.daily.example.plist
scripts/: boss_login.py  debug_push.py  import_chrome_cookies.py  push_reminder.py  run_boss.py  run_daily.py
src/job_radar/: __init__.py  brave_searcher.py  models.py  push.py  report.py  score.py  storage.py
src/job_radar/scrapers/: __init__.py  base.py  boss.py  greenhouse.py  lever.py  runner.py  smartrecruiters.py  workday.py
