[project]
name = "job-radar"
version = "0.1.0"
description = "Local job-hunting radar: import JSON -> LLM scoring -> Markdown daily -> WxPusher"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "openai>=1.50",
    "httpx[socks]>=0.27",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
    "playwright>=1.40",
    "playwright-stealth>=2.0",
    "browser-cookie3>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_radar"]
