[project]
name = "job-radar"
version = "0.1.0"
description = "Local job-hunting radar: import JSON -> LLM scoring -> Markdown daily -> WxPusher"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "openai>=1.50",
    "httpx[socks]>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/job_radar"]
